# schwab

./: .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.grafana  PLAN.md  README.md  SPEC.md  TODOs.md  account_orders_openapi.yaml  docker-compose.template.yaml  docker-compose.yaml  docker-compose.yml  flake.nix  grafana-datasource.yaml  package-lock.json  package.json  prep-docker-compose.sh  remappings.txt  rollback.sh  tarpaulin-report.html
.claude/tasks/: 2025-08-25-local-postgres.md  2025-08-25-postgres-migration.md  2025-08-26-digital-ocean-deployment.md  2025-08-27-order-fill-tracking.md  2025-08-27-type-modeling-refactor.md  2025-09-01-live-testing-fixes.md  2025-09-02-live-testing-fixes.md  2025-09-03-market-hours-control.md  2025-09-03-remaining-fixes.md  2025-09-04-live-test-multiple-equities.md  2025-09-08-amount-extraction-bug.md  2025-09-10-hyperdx-observability.md  2025-09-10-stop-background-tasks-on-market-close.md  2025-09-11-fee-tracking-pnl-calc.md  2025-09-17-grafana-metrics-integration.md  postgres_migration.md
.do/: app.yaml
.github/workflows/: deploy.yaml  docker-build.yml  rainix.yaml  rollback.yaml  test-coverage.yaml
crates/broker/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/broker/src/: dry_run.rs  error.rs  lib.rs  mock.rs  order_state.rs  test.rs  test_utils.rs
crates/broker/src/alpaca/: auth.rs  broker.rs  market_hours.rs  mod.rs  order.rs
crates/broker/src/order/: mod.rs  state.rs  status.rs
crates/broker/src/schwab/: auth.rs  broker.rs  execution.rs  market_hours.rs  market_hours_cache.rs  mod.rs  order.rs  order_poller.rs  order_status.rs  tokens.rs  trade_state.rs
migrations/: 20250703115746_trades.sql  20250807153331_add_trade_batching_support.sql  20250911000000_unified_schema.sql  20250919164756_broker_abstraction.sql  20250924015332_add_block_timestamp_to_onchain_trades.sql  20250926000000_add_gas_tracking_to_onchain_trades.sql  20251001013535_add_pyth_prices.sql  20251003205815_add_token_encryption.sql
src/: api.rs  arb.rs  bindings.rs  cli.rs  conductor.rs  db_utils.rs  env.rs  error.rs  lib.rs  lock.rs  main.rs  metrics.rs  order.rs  pyth.rs  queue.rs  schwab.rs  schwab_auth.rs  symbol_cache.rs  telemetry.rs  test_utils.rs  trade.rs  trade_execution_link.rs  trading_hours_controller.rs
src/conductor/: builder.rs  mod.rs
src/offchain/: execution.rs  mod.rs  order_poller.rs
src/onchain/: accumulator.rs  backfill.rs  clear.rs  coordinator.rs  execution_trades.rs  io.rs  mod.rs  position_accumulator.rs  position_calculator.rs  processor.rs  take_order.rs  trade.rs  trade_accumulator.rs  trade_accumulator_repository.rs  trade_execution_link.rs  trade_execution_service.rs  trade_executions.rs
src/onchain/pyth/: mod.rs
src/onchain/trade/: accumulator.rs  mod.rs
src/pyth/: feed_id_cache.rs  mod.rs
src/reporter/: mod.rs  pnl.rs
src/schwab/: auth.rs  broker.rs  encryption.rs  execution.rs  market_hours.rs  market_hours_cache.rs  mod.rs  order.rs  order_poller.rs  order_status.rs  tokens.rs  trade_state.rs
src/symbol/: cache.rs  lock.rs  mod.rs
src/trade/: backfill.rs  clear.rs  mod.rs  processor.rs  take_order.rs
tests/: integration.rs  integration_test.rs  pnl_integration.rs  schwab_integration.rs
