[package]
name = "rain_schwab"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.9", features = ["full"] }
anyhow = "1.0.98"
backon = { version = "1.5.1", features = ["tokio"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
lazy_static = "1.5.0"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "chrono",
    "runtime-tokio",
    "tls-native-tls",
] }
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.22"

[dev-dependencies]
httpmock = "0.7.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
