[package]
name = "rain_schwab"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.9", features = ["full"] }
anyhow = "1.0.98"
backon = { version = "1.5.1", features = ["tokio"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
lazy_static = "1.5.0"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "runtime-tokio-rustls",
] }
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1"
flate2 = "1.0"
itertools = "0.14.0"
rocket = { version = "0.5.1", features = ["json"] }

[dev-dependencies]
httpmock = "0.7.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = "deny"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
