[workspace]
members = [".", "crates/broker"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.81"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "runtime-tokio-rustls",
] }
backon = { version = "1.5.1", features = ["tokio"] }
base64 = "0.22"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
flate2 = "1.0"
httpmock = "0.7.0"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
serial_test = "3.2.0"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1"
rand = "0.8"

[package]
name = "st0x-arbot"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.9", features = ["full"] }
anyhow = "1.0.98"
async-trait.workspace = true
st0x-broker = { path = "crates/broker" }
backon.workspace = true
clap.workspace = true
dotenvy = "0.15.7"
futures-util = "0.3.31"
lazy_static = "1.5.0"
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
reqwest.workspace = true
serde.workspace = true
chrono.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding.workspace = true
flate2.workspace = true
itertools = "0.14.0"
rand = "0.8"
rocket = { version = "0.5.1", features = ["json"] }
chrono-tz = "0.10.4"

[dev-dependencies]
httpmock.workspace = true
serial_test.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = "deny"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
missing_const_for_fn = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
